<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="414dp"
        android:layout_height="670dp"
        android:background="#EDFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/servicesHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Our Services"
            android:textColor="#7E5FB3"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/box1"
            android:layout_width="397dp"
            android:layout_height="82dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/servicesHeading">

            <ImageView
                android:id="@+id/venueImage"
                android:layout_width="171dp"
                android:layout_height="94dp"
                android:src="@drawable/pic1" />

            <TextView
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/real_time_venue_availability_amp_booking"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/box2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical|end"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/box1">

            <TextView
                android:layout_width="207dp"
                android:layout_height="61dp"
                android:layout_marginEnd="10dp"
                android:text="@string/easy_event_scheduling_amp_calendar_integration"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/scheduleImage"
                android:layout_width="168dp"
                android:layout_height="78dp"
                android:src="@drawable/pic2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/box3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/box2">

            <ImageView
                android:id="@+id/navigationImage"
                android:layout_width="107dp"
                android:layout_height="69dp"
                android:src="@drawable/pic1" />

            <TextView
                android:layout_width="219dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/navigation_to_event_locations_in_real_time"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/box4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical|end"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/box3">

            <TextView
                android:layout_width="279dp"
                android:layout_height="46dp"
                android:layout_marginEnd="10dp"
                android:text="@string/personalized_event_planning_amp_customization"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/customImage"
                android:layout_width="84dp"
                android:layout_height="58dp"
                android:src="@drawable/pic2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/box5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/box4">

            <ImageView
                android:id="@+id/budgetImage"
                android:layout_width="79dp"
                android:layout_height="68dp"
                android:src="@drawable/pic1" />

            <TextView
                android:layout_width="198dp"
                android:layout_height="51dp"
                android:layout_marginStart="10dp"
                android:text="@string/budget_tracking_amp_cost_estimation"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/next3"
            style="@android:style/Widget.Button"
            android:layout_width="322dp"
            android:layout_height="49dp"
            android:layout_margin="32dp"
            android:background="@drawable/custom_button"
            android:drawableRight="@drawable/right"
            android:padding="10dp"
            android:text="Get Started"
            android:textColor="@color/background_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.723"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
