<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".Category">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="544dp"
                android:layout_height="476dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/coffee_bean"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="-90dp" />

            <ImageView
                android:id="@+id/logoPic"
                android:layout_width="69dp"
                android:layout_height="63dp"
                android:background="@drawable/logo_event"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="10dp" />

            <TextView
                android:id="@+id/logoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:text="@string/momentous"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/logoPic"
                app:layout_constraintStart_toStartOf="@id/logoPic"
                app:layout_constraintTop_toBottomOf="@id/logoPic"
                app:layout_constraintTop_toTopOf="@id/logoPic" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.075">


                <EditText
                    android:id="@+id/editTextText2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/edittext_bg"
                    android:drawableStart="@drawable/search"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/search_anything"
                    android:inputType="text"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="Good Morning"

                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/we_would_like_to_grab_our_first_booking"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/addNewEvent"
        android:layout_width="339dp"
        android:layout_height="55dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/custom_button"
        android:drawableRight="@drawable/right"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/add_new_event_booking"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/BottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="373dp"
        android:layout_height="372dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints">

        <HorizontalScrollView
            android:layout_width="353dp"
            android:layout_height="379dp"
            android:fillViewport="true"
            android:scrollbars="none"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="12dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/picture1"
                    android:layout_width="294dp"
                    android:layout_height="400dp"
                    android:layout_marginEnd="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/horiscrol1" />

                <ImageView
                    android:id="@+id/picture2"
                    android:layout_width="300dp"
                    android:layout_height="400dp"
                    android:layout_marginEnd="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hscview2" />

                <ImageView
                    android:id="@+id/picture3"
                    android:layout_width="300dp"
                    android:layout_height="400dp"
                    android:layout_marginEnd="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hscview5" />

                <ImageView
                    android:id="@+id/picture4"
                    android:layout_width="300dp"
                    android:layout_height="400dp"
                    android:layout_marginEnd="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hsview4" />

                <ImageView
                    android:id="@+id/picture5"
                    android:layout_width="300dp"
                    android:layout_height="400dp"
                    android:layout_marginEnd="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hsview3" />

                <ImageView
                    android:id="@+id/picture6"
                    android:layout_width="300dp"
                    android:layout_height="400dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/horiscrol1" />

            </LinearLayout>
        </HorizontalScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginTop="643dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView3"
        app:menu="@menu/menu_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
