<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Favourite">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/back1"
            android:layout_width="27dp"
            android:layout_height="29dp"
            android:src="@drawable/left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.529"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="188dp"
            android:layout_height="46dp"
            android:gravity="center"
            android:paddingStart="16dp"
            android:text="My Favourites"
            android:textColor="@color/primary_color"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="411dp"
        android:layout_height="504dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints">

        <ScrollView
            android:layout_width="371dp"
            android:layout_height="512dp"
            android:padding="16dp"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="-30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ContainerBack"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginEnd="12dp"
                            android:background="@android:color/darker_gray"
                            android:backgroundTint="@android:color/white"
                            android:backgroundTintMode="src_atop"
                            android:clipToOutline="true"
                            android:contentDescription="Profile Image"
                            android:scaleType="centerCrop"
                            android:src="@drawable/pic1" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Ministry of Crab"
                                android:textColor="@android:color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/excellent_food_perfect_ambiance_and_unparalleled_service"
                                android:textColor="@android:color/darker_gray"
                                android:textSize="14sp"
                                android:textStyle="italic" />
                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginEnd="12dp"
                            android:background="@android:color/darker_gray"
                            android:backgroundTint="@android:color/white"
                            android:backgroundTintMode="src_atop"
                            android:clipToOutline="true"
                            android:contentDescription="Profile Image"
                            android:scaleType="centerCrop"
                            android:src="@drawable/pic1" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="The Lagoon"
                                android:textColor="@android:color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/indulge_in_culinary_perfection_surrounded_by_elegance_and_unparalleled_hospitality"
                                android:textColor="@android:color/darker_gray"
                                android:textSize="14sp"
                                android:textStyle="italic" />
                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginEnd="12dp"
                            android:background="@android:color/darker_gray"
                            android:backgroundTint="@android:color/white"
                            android:backgroundTintMode="src_atop"
                            android:clipToOutline="true"
                            android:contentDescription="Profile Image"
                            android:scaleType="centerCrop"
                            android:src="@drawable/pic1" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Argile"
                                android:textColor="@android:color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/escape_the_ordinary_we_are_at_your_door_step_24_7"
                                android:textColor="@android:color/darker_gray"
                                android:textSize="14sp"
                                android:textStyle="italic" />
                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/addToFavourites"
        android:layout_width="194dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/custom_edittext"
        android:padding="3dp"
        android:text="Add to Favorites"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/menu_button"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
